--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,33 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
 
+
+
   <body>
+  <nav>
+
+   <ul>
+    <li><a href="/users">All users</a></li>
+    <li><a href="/photos">All public photos</a></li>
+
+    <% if current_user != nil %>
+
+      <li> <a href = "/users/sign_out"> Sign out </a> </li>
+      <li> <a href = "/users/edit"> Sign in </a> </li>
+
+ <% else %>
+     
+     <li> <a href = "/users/sign_up"> Sign up </a> </li>
+     <li> <a href = "/users/sign_in"> Sign in </a> </li>
+
+  <% end %>
+
+
+  </ul>
+
+  
+
+  </nav>
     <%= yield %>
   </body>
 </html>
