--- a/app/views/photo_templates/index.html.erb
+++ b/app/views/photo_templates/index.html.erb
@@ -1,10 +1,9 @@
 <h1> List of photos </h1>
 
-<hr>
 
-<form action="/insert_photo" method="post">
+<form action="/insert_photo" method="post" enctype="multipart/form-data">
   <label for="image_box">Image</label>
-  <input id="image_box" name="query_image">
+  <input id="image_box" name="query_image" type="file">
 
   <label for="caption_box">Caption</label>
   <textarea id="caption_box" name="query_caption"></textarea>
@@ -16,13 +15,10 @@
 </form>
 
 
-<hr>
-
-
 <table border="1">
   <tr>
 
-    <th> Imagine </th>
+    <th> Image </th>
     <th> Caption </th>
     <th> Owner </th>
     <th> Posted </th>
@@ -41,8 +37,10 @@
     <td>
       <%= a_photo.poster.username %>
     </td>
+   <td><%= time_ago_in_words(a_photo.created_at) %> ago</td>
+
     <td>
-      <%= a_photo.created_at %>
+      <%= a_photo.likes_count %>
 
     </td>
 
